Tests/Error/GoalFirst/.build/alwaysfails.pr
{
  "name": "AlwaysFails",
  "description": "AlwaysFails: increments %goalFirstAttempts% and writes it back, then throws an error.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "add 1 to %goalFirstAttempts%, write to %goalFirstAttempts%",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "math",
          "action": "add",
          "parameters": [
            {
              "name": "A",
              "value": "%goalFirstAttempts%",
              "type": "object"
            },
            {
              "name": "B",
              "value": 1,
              "type": "object"
            }
          ],
          "defaults": null,
          "modifiers": []
        },
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%goalFirstAttempts%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": "%__data__%",
              "type": "object"
            }
          ],
          "defaults": [
            {
              "name": "asdefault",
              "value": false,
              "type": "bool"
            }
          ],
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "throw error \u0022always fails\u0022",
      "lineNumber": 3,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "always fails",
              "type": "tstring"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/AlwaysFails.goal",
  "prPath": "/.build/alwaysfails.pr",
  "hash": "20452d6d06df8961ba441d4dc18fc37c2e6dd04b2658568f70fb8b95f341268d",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}